<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Scrum</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="time_input_text">Enter time in seconds</string>
    <string name="set_timer_text">Start</string>
    <string name="title_activity_timer">briefly</string>
    <string name="timer">000</string>
    <string name="stop_button_text">Stop</string>
    <string name="restart_button_text">Restart</string>
    <string name="username">Phone #</string>
    <string name="usernames">ughhhhh</string>
    <string name="add_user_text">Add</string>
    <string name="contact_field">Enter contact</string>
    <string name="contact_button">Browse</string>
    <string name="clear_button">Clear</string>
    <string name="add_group_text">Add Group</string>
    <string name="yea">yea</string>
    <string name="create_group_text">Create Group</string>
    <string name="title_activity_group">briefly</string>
    <string name="title_activity_edit_group">briefly</string>
    <string name="group_name_hint">Group Name</string>
    <string name="time_limit_hint">Time Limit (seconds)</string>
    <string name="charge_amt_hint">1.00</string>
    <string name="add_person_text">Add Person</string>
    <string name="title_activity_add_person">AddPersonActivity</string>
    <string name="person_name_hint">Name</string>
    <string name="person_number_hint">12345678890</string>
    <string name="browse_contacts_text">Browse Contacts</string>
    <string name="exit_add_person_text">Done</string>
    <string name="save_group_text">Save Group</string>
    <string name="start_timer_text">Start Timer</string>
    <string name="label_group_name">Group Name:</string>
    <string name="label_time_limit">Time Limit:</string>
    <string name="label_charge_amt">Charge:</string>
    <string name="title_activity_delete_dialog">DeleteDialogActivity</string>
    <string name="title_activity_delete_group">DeleteGroupActivity</string>

</resources>
